feat: AI工具调用重构 + 多控制器API修复
- StreamChatService重构为工具调用模式，注册NetdiskTools供LLM自主调用
- 新增NetdiskTools：readDocument, createDocument, generateImage等工具
- AiDocumentService增强文档生成能力（docx/xlsx/html/json/csv）
- ImageGenerationService优化图片生成流程，支持ComfyUI远程部署
- ComfyUIConfig支持自定义工作流ID和轮询间隔配置
- ImageGenResponse新增imageId字段
- 多控制器(API路径)修复：file/share/user/vault/album
- RagServiceProperties新增enabled开关
- 添加工具调用设计文档 DESIGN_TOOL_CALLING.md